# internal/repository/postgres/spec_template_model.go
@@ -8,15 +8,16 @@ import (
 )
 
 type SpecTemplateModel struct {
-	ID              string         `gorm:"type:uuid;primaryKey;default:uuid_generate_v4()"`
-	Name            string         `gorm:"type:varchar(255);not null"`
-	Spec            string         `gorm:"type:text;not null"`
-	Description     string         `gorm:"type:text"`
-	Composition     string         `gorm:"type:varchar(255)"`
-	CareInstruction string         `gorm:"type:text"`
-	CreatedAt       time.Time      `gorm:"autoCreateTime"`
-	UpdatedAt       time.Time      `gorm:"autoUpdateTime"`
-	DeletedAt       gorm.DeletedAt `gorm:"index"`
+	ID              string             `gorm:"type:uuid;primaryKey;default:uuid_generate_v4()"`
+	Name            string             `gorm:"type:varchar(255);not null"`
+	Spec            string             `gorm:"type:text;not null"`
+	Description     string             `gorm:"type:text"`
+	Composition     string             `gorm:"type:varchar(255)"`
+	CareInstruction string             `gorm:"type:text"`
+	CreatedAt       time.Time          `gorm:"autoCreateTime"`
+	UpdatedAt       time.Time          `gorm:"autoUpdateTime"`
+	DeletedAt       gorm.DeletedAt     `gorm:"index"`
+	Colors          []FabricColorModel `gorm:"foreignKey:SpecTemplateID;constraint:OnDelete:CASCADE;"`
 }
 
 func (SpecTemplateModel) TableName() string {
@@ -24,7 +25,7 @@ func (SpecTemplateModel) TableName() string {
 }
 
 func (m *SpecTemplateModel) ToDomain() *domain.SpecTemplate {
-	return &domain.SpecTemplate{
+	specTemplate := &domain.SpecTemplate{
 		ID:              m.ID,
 		Name:            m.Name,
 		Spec:            m.Spec,
@@ -34,10 +35,20 @@ func (m *SpecTemplateModel) ToDomain() *domain.SpecTemplate {
 		CreatedAt:       m.CreatedAt,
 		UpdatedAt:       m.UpdatedAt,
 	}
+
+	if len(m.Colors) > 0 {
+		var colors []domain.FabricColor
+		for _, c := range m.Colors {
+			colors = append(colors, c.ToDomain())
+		}
+		specTemplate.Colors = colors
+	}
+
+	return specTemplate
 }
 
 func FromSpecTemplateDomain(d *domain.SpecTemplate) *SpecTemplateModel {
-	return &SpecTemplateModel{
+	model := &SpecTemplateModel{
 		ID:              d.ID,
 		Name:            d.Name,
 		Spec:            d.Spec,
@@ -47,4 +58,27 @@ func FromSpecTemplateDomain(d *domain.SpecTemplate) *SpecTemplateModel {
 		CreatedAt:       d.CreatedAt,
 		UpdatedAt:       d.UpdatedAt,
 	}
+
+	if len(d.Colors) > 0 {
+		var colors []FabricColorModel
+		for _, c := range d.Colors {
+			var fabricIDPtr *string
+			if c.FabricID != "" {
+				fabricID := c.FabricID
+				fabricIDPtr = &fabricID
+			}
+
+			colors = append(colors, FabricColorModel{
+				ID:             c.ID,
+				FabricID:       fabricIDPtr,
+				SpecTemplateID: c.SpecTemplateID,
+				Name:           c.Name,
+				HexCode:        c.HexCode,
+				CreatedAt:      c.CreatedAt,
+			})
+		}
+		model.Colors = colors
+	}
+
+	return model
 }
